# memento

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: bootstrap.rs  cli.rs  client.rs  config.rs  dispatch.rs  embedding.rs  indexing.rs  main.rs  mcp.rs  protocol.rs  resource_state.rs  server.rs  spinner.rs  text_file.rs  timing.rs  uri.rs
src/render/: add.rs  cat.rs  doctor.rs  find.rs  forget.rs  ls.rs  mod.rs  models.rs  reindex.rs  remember.rs  rm.rs  show.rs
src/repository/: workspace.rs
src/service/: add.rs  cat.rs  doctor.rs  find.rs  forget.rs  ls.rs  mod.rs  models.rs  reindex.rs  remember.rs  rm.rs  shared.rs  show.rs
tests/: cli_doctor.rs  cli_flow.rs  cli_indexing.rs  cli_init.rs  cli_mcp.rs  cli_memory.rs  cli_models_find.rs  cli_read.rs  cli_serve.rs  doctor_cli.rs
tests/support/: mod.rs
