[package]
name = "memento"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
dirs = "6.0"
fastembed = "5.13.0"
glob = "0.3.3"
owo-colors = "4.3.0"
rmcp = { version = "1.2.0", features = ["transport-streamable-http-server"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.7"
tiny_http = "0.12"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
tokio-util = "0.7"
toml = "1.0.7"
ureq = { version = "3.2.0", default-features = false, features = ["json"] }
zerocopy = "0.8.42"

[dev-dependencies]
assert_cmd = "2.2.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.27.0"
